# yky_project

./: Project1.sln  package.xml  pressure sensor  setup.cfg  setup.py
LLMtest/: expected.json  keycap_YOLO.py  main.py  move_to_keycap_test.py  prompt.txt  send_script_chat.py  test_keep.py
LLMtest/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Project1/: Project1.vcxproj
arm_movement/: CMakeLists.txt  package.xml
arm_movement/src/: pose_subscriber.cpp  send_movement.cpp
bringup/: package.xml  setup.py
bringup/launch/: main.launch.py  subscribers.launch.py
json/: feedback_pose.json  keycap_coordinate.json  last_move.json  move.json
path_planning/: package.xml  setup.py
path_planning/launch/: path_planning.launch.py
pressure_sensor_pkg/: pressure_sensor.py
realsense/: package.xml  setup.py
realsense/launch/: realsense.launch.py
realsense/realsense/: realsense_node.py
transfer/: package.xml  setup.cfg  setup.py
transfer/launch/: transfer.launch.py
transfer/transfer/: transfer.py
yolo/: package.xml  setup.py
yolo/launch/: yolo.launch.py
yolo/yolo/: analysis.py  node.py  yolo_visualization.py
